# pureCdaViewer

./: LICENSE  README.md  cda.cabal  go.bat  server.cfg
snaplets/cda/src/Cda/: Handlers.hs  Parser.hs  Splices.hs  Types.hs
snaplets/cda/src/Cda/arx/: Compiled.hs  Handlers0.hs  __Handlers.hs  _cmp_Handlers.hs
snaplets/heist/templates/: _document.tpl  _empty.tpl  _home.tpl  _parser_error.tpl  _toolong.tpl  base.tpl  success.tpl
src/: Application.hs  Main.hs  Site.hs
statics/css/: google.sscc  icon.css  icons.css  material-icons.css  open-sans.css  style.css
statics/js/: app.js
