Name:               cda
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:         maintainer@example.com
Stability:           Experimental
Category:           Web
Build-type:         Simple
Cabal-version:      >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable cda
  hs-source-dirs: src, snaplets/cda/src
  main-is: Main.hs

  Build-depends:
    base                      >= 4.4      && < 5,
    bytestring                >= 0.9.1   && < 0.11,
    heist                     >= 0.14    && < 0.15,
    hexpat,
    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
    mtl                       >= 2       && < 3,
    snap                      >= 0.13    && < 0.14,
    snap-core                 >= 0.9     && < 0.10,
    snap-server               >= 0.9     && < 0.10,
    snap-loader-static        >= 0.9     && < 0.10,
    text                      >= 0.11    && < 1.3,
    xmlhtml                   >= 0.1     && < 0.3,
    transformers,
    directory,
    filepath,
    lens,
    uuid
 
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -fno-warn-orphans
