Name:               pureCdaViewer
Version:            0.0
Synopsis:           The small web application for easy view a clinical doducument XML formed files 
Description:        The app reads then parses and renders in html the c-cda xml file
License:            BSD3
License-file:       LICENSE
Copyright:          Copyright (C) 2016 SLikhachev
Author:             SLikhachev <polaughing@yahoo.com>
Maintainer:         SLikhachev <polaughing@yahoo.com>
Stability:          Experimental
Category:           Web, Snap
Build-type:         Simple
Cabal-version:      >=1.2

Homepage:         https://github.com/SLikhachev/pureCdaViewer

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable cda
  hs-source-dirs: src, snaplets/cda/src
  main-is: Main.hs

  Build-depends:
    base                      >= 4.4  &&  < 5,
    bytestring                >= 0.9.1  &&  < 0.11,
    heist                     >= 0.14  &&  < 0.15,
    hexpat                   >= 0.19  &&  < 0.21,
    MonadCatchIO-transformers >= 0.2.1  &&  < 0.4,
    mtl                       >= 2  &&  < 3,
    snap                      >= 0.13  &&  < 0.14,
    snap-core                 >= 0.9  &&  < 0.10,
    snap-server               >= 0.9  &&  < 0.10,
    snap-loader-static        >= 0.9  &&  < 0.10,
    text                      >= 0.11  &&  < 1.3,
    xmlhtml                   >= 0.1  &&  < 0.3,
    transformers             > 0.3  &&  < 0.5,
    directory                  > 1.1  &&  < 1.2,
    filepath                    > 1.2  &&  < 1.4,   
    lens                        > 4.4  &&  < 4.5,
    uuid                        > 1.3  &&  < 1.4,
    configurator               > 0.2  &&  <  0.4 
 
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -fno-warn-orphans
